[project]
name = "armangle"
version = "0.2.2"
description = "Compute the arm angle of a pitch from publicly available release point and shoulder data"
readme = "README.md"
authors = [
    { name = "Matt Dennewitz", email = "mattdennewitz@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "joblib>=1.4.2",
    "loguru>=0.7.3",
    "pydantic-settings>=2.8.1",
    "pydantic>=2.8.2",
    "pygam>=0.9.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "aider-chat>=0.43.3",
    "ruff>=0.11.2",
]
train = [
    "optuna>=4.2.1",
    "polars>=1.26.0",
    "scikit-learn>=1.6.1",
]
